--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .hero {
-  background: url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+  background: url('https://plus.unsplash.com/premium_photo-1664695368767-c42483a0bda1?crop=entropy&cs=srgb&fm=jpg&ixid=M3wxMjA3fDB8MXxzZWFyY2h8MXx8dHJ1Y2t8ZW58MHx8fHwxNzUyNzA4MjQwfDA&ixlib=rb-4.1.0&q=85') center/cover no-repeat;
   height: 70vh;
   display: flex;
   align-items: center;
